# pqc-protocol

./: Cargo.toml  PROTOCOL_SPEC.md  README.md  README.txt
benches/: crypto_benchmarks.rs
examples/: async_example.rs  file_transfer.rs  simple_chat.rs
examples/basic/: client.rs  server.rs
examples/csharp/: Example.cs  PqcProtocol.cs
examples/web/: browser_example.js
src/: api.rs  constants.rs  error.rs  header.rs  lib.rs  serde.rs  session.rs  streaming.rs  types.rs
src/api_async/: client.rs  mod.rs  server.rs  stream.rs
src/api_sync/: client.rs  mod.rs  server.rs  stream.rs
src/bindings/: mod.rs
src/bindings/ffi/: c_api.rs  mod.rs
src/bindings/wasm/: bindings.rs  mod.rs
src/client/: async_client.rs  mod.rs  sync_client.rs
src/core/: constants.rs  error.rs  mod.rs
src/core/crypto/: api.rs  auth.rs  cipher.rs  config.rs  key_exchange.rs  mod.rs  registry.rs
src/core/crypto/algorithms/: mod.rs
src/core/crypto/algorithms/kex/: kyber.rs  mod.rs
src/core/crypto/algorithms/signatures/: dilithium.rs  mod.rs
src/core/crypto/algorithms/symmetric/: aes_gcm.rs  chacha20poly1305.rs  mod.rs
src/core/crypto/registry/: manager.rs  mod.rs
src/core/crypto/traits/: cipher.rs  kex.rs  mod.rs  signature.rs
src/core/crypto/types/: algorithms.rs  config.rs  constants.rs  errors.rs  mod.rs
src/core/memory/: api.rs  config.rs  constant_time.rs  enhanced_memory.rs  error.rs  hardware_security.rs  heapless_vec.rs  memory_security.rs  mod.rs  protected_memory.rs  secure_memory.rs  secure_memory_manager.rs  secure_vec.rs  wasm_memory.rs  zeroize.rs  zeroize_on_drop.rs
src/core/memory/containers/: base_container.rs  enhanced_container.rs  heap_container.rs  mod.rs  readonly_container.rs  stack_container.rs
src/core/memory/hardware/: hsm.rs  mod.rs
src/core/memory/manager/: config.rs  memory_manager.rs  mod.rs
src/core/memory/traits/: mod.rs  protection.rs  security.rs  zeroize.rs
src/core/memory/utils/: canary.rs  constant_time.rs  mod.rs  zeroize_on_drop.rs
src/core/message/: format.rs  mod.rs  types.rs
src/core/security/: mod.rs  rotation.rs
src/core/session/: auth_manager.rs  data_manager.rs  key_manager.rs  manager.rs  mod.rs  session.rs
src/core/streaming/: mod.rs  receiver.rs  sender.rs
src/crypto/: auth.rs  cipher.rs  key_exchange.rs
src/examples/: browser_example.js  client.rs  server.rs
src/examples/csharp/: Example.cs  PqcProtocol.cs
src/ffi/: c_api.rs  mod.rs
src/memory/: secure.rs
src/message/: format.rs  mod.rs
src/protocol/: builder.rs  mod.rs
src/protocol/client/: async_client.rs  common.rs  mod.rs  sync_client.rs
src/protocol/server/: async_server.rs  common.rs  mod.rs  sync_server.rs
src/protocol/shared/: crypto.rs  mod.rs  traits.rs  utils.rs
src/protocol/stream/: async_stream.rs  common.rs  mod.rs  sync_stream.rs
src/security/: constant_time.rs  mod.rs  rotation.rs
src/session/: manager.rs  state.rs
src/stream/: async_stream.rs  common.rs  sync_stream.rs
src/streaming/: mod.rs  sender.rs
src/wasm/: bindings.rs
tests/: crypto_test.rs  integration_test.rs  key_exchange_test.rs  property_tests.rs
