[package]
name = "pqc-protocol"
version = "0.1.0"
edition = "2024"
authors = ["snitzelklaus@gmail.com"]
description = "Post-Quantum Cryptography Streaming Protocol"

[dependencies]
subtle = "2.6.1"

# PQC algorithms - using actual implementations
pqcrypto-kyber = "0.8.1"        # CRYSTALS-Kyber implementation
pqcrypto-dilithium = "0.5.0"    # CRYSTALS-Dilithium implementation
pqcrypto-traits = "0.3.5"       # Shared traits for PQC algorithms

# Crypto utilities
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
rand = "0.9.0"
hkdf = "0.12.4"

# Registry and utilities
once_cell = "1.10.0"     # For lazy static registry
uuid = { version = "1.0", features = ["v4"] }  # For unique identifiers

# Optional AES support
aes-gcm = { version = "0.10.1", optional = true }

# Serialization and buffers
bytes = "1.10.1"
byteorder = "1.5.0"
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = { version = "1.0.140", optional = true }
bincode = { version = "2.0.1", optional = true }

# Error handling
thiserror = "2.0.12"

# Async support
tokio = { version = "1.44.0", features = ["full"], optional = true }

# FFI
libc = { version = "0.2.171", optional = true }

# WASM support
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.5.1"

[features]
# Core features
default = ["std", "secure-memory", "memory-zero"]
std = []
async = ["tokio"]
serde-support = ["dep:serde", "dep:serde_json", "dep:bincode"]
ffi = ["libc"]

# Memory security features
secure-memory = ["memory-canary", "memory-lock", "memory-zero"]
memory-canary = []      # Buffer overflow detection via canary values
memory-lock = []        # Prevent memory from being swapped to disk
memory-zero = []        # Zero memory when it's freed
memory-enhanced = []    # Enhanced memory protection with read-only when not in use

# Platform compatibility
wasm-compat = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
embedded-compat = []
windows-compat = []

# PQC algorithm variants
kyber512 = []
kyber1024 = []
dilithium2 = []
dilithium5 = []
aes-gcm = ["dep:aes-gcm"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3